[tool.poetry]
name = "dbx-unit-testing"
version = "0.1.0"
description = ""
authors = ["Chad Upjohn <chad.upjohn@pinnsg.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.4.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
