[tool.poetry]
name = "dbx-unit-testing"
version = "0.1.0"
description = ""
authors = ["Chad Upjohn <chad.upjohn@pinnsg.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.4.0"
isort = "^5.13.2"
jinja2 = "^3.1.3"
pyyaml = "^6.0.1"
pytest = "^8.2.0"
pdbpp = "^0.10.3"
databricks-sql-connector = "^3.1.2"


[tool.poetry.group.unit_test.dependencies]
pyspark = "^3.5.1"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90

[tool.pytest.ini_options]
testpaths = [
    "src/sql.py",
    "src/utils.py",
]

